[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-call-logger-py"
version = "0.1.0"
description = "Structured JSONL logger for LLM tool calls and results"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["llm", "agent", "logging", "tool-use", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/tool-call-logger-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tool_call_logger = ["py.typed"]
